[+] methods in controllers

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,22 @@
 spring.application.name=api-gateway
+
+springdoc.swagger-ui.csrf.enabled=true
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.path=/api/swagger-ui.html
+springdoc.api-docs.path=/api/v3/api-docs
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=5MB
+
+spring.main.banner-mode=off
+
+supmap.properties.allowed-origins=${ALLOWED_ORIGINS}
+supmap.properties.database-name=${DATABASE_NAME}
+supmap.properties.elasticsearch-password=${ELASTICSEARCH_PASSWORD}
+supmap.properties.elasticsearch-url=${ELASTICSEARCH_URL}
+supmap.properties.elasticsearch-username=${ELASTICSEARCH_USERNAME}
+supmap.properties.jwt-secret=${JWT_SECRET}
+supmap.properties.kafka-bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS}
+supmap.properties.mongo-uri=${MONGO_URI}
