--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,15 @@ services:
     ports:
       - "8080:8080"
     environment:
-      - PORT=${{ shared.PORT }}
-      - KAFKA_BOOTSTRAP_SERVERS=${{ shared.KAFKA_BOOTSTRAP_SERVERS }}
-      - JWT_SECRET=${{ shared.JWT_SECRET }}
       - ALLOWED_ORIGINS=${{ shared.ALLOWED_ORIGINS }}
+      - DATABASE_NAME=${{ shared.DATABASE_NAME }}
+      - ELASTICSEARCH_PASSWORD=${{ shared.ELASTICSEARCH_PASSWORD }}
+      - ELASTICSEARCH_URL=${{ shared.ELASTICSEARCH_URL }}
+      - ELASTICSEARCH_USERNAME=${{ shared.ELASTICSEARCH_USERNAME }}
+      - JWT_SECRET=${{ shared.JWT_SECRET }}
+      - KAFKA_BOOTSTRAP_SERVERS=${{ shared.KAFKA_BOOTSTRAP_SERVERS }}
+      - MONGO_URI=${{ shared.MONGO_URI }}
+      - NEXUS_URL=${{ shared.NEXUS_URL }}
+      - NEXUS_USERNAME=${{ shared.NEXUS_USERNAME }}
+      - NEXUS_PASSWORD=${{ shared.NEXUS_PASSWORD }}
     restart: always
