--- a/pom.xml
+++ b/pom.xml
@@ -34,13 +34,13 @@
 		<dependency>
 			<groupId>com.novus</groupId>
 			<artifactId>shared-models</artifactId>
-			<version>1.0.5</version>
+			<version>1.1.1</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.novus</groupId>
 			<artifactId>database-utils</artifactId>
-			<version>1.0.2</version>
+			<version>1.0.3</version>
 		</dependency>
 
 		<dependency>
@@ -138,6 +138,12 @@
 		<dependency>
 			<groupId>org.springframework.kafka</groupId>
 			<artifactId>spring-kafka</artifactId>
+		</dependency>
+
+		<!-- oauth2 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-client</artifactId>
 		</dependency>
 	</dependencies>
 
