--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,7 @@ supmap.properties.elasticsearch-username=${ELASTICSEARCH_USERNAME}
 supmap.properties.jwt-secret=${JWT_SECRET}
 supmap.properties.kafka-bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS}
 supmap.properties.mongo-uri=${MONGO_URI}
+
+logging.level.org.elasticsearch=INFO
+logging.level.co.elastic.clients=INFO
+logging.level.com.novus.api_gateway=DEBUG
