--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 	<repositories>
 		<repository>
 			<id>nexus</id>
-			<url>https://nexus3-production.up.railway.app/repository/maven-public/</url>
+			<url>http://nexus3.railway.internal/repository/maven-public/</url>
 			<releases>
 				<enabled>true</enabled>
 			</releases>
