--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,4 +20,8 @@ services:
       - NEXUS_URL=${{ shared.NEXUS_URL }}
       - NEXUS_USERNAME=${{ shared.NEXUS_USERNAME }}
       - NEXUS_PASSWORD=${{ shared.NEXUS_PASSWORD }}
+      - GOOGLE_API_KEY=${{ shared.GOOGLE_API_KEY }}
+      - GOOGLE_CLIENT_ID=${{ shared.GOOGLE_CLIENT_ID }}
+      - GOOGLE_CLIENT_SECRET=${{ shared.GOOGLE_CLIENT_SECRET }}
+      - GOOGLE_REDIRECT_URI=${{ shared.GOOGLE_REDIRECT_URI }}
     restart: always
