--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,8 @@ spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_
 spring.security.oauth2.client.registration.google.scope=profile, email
 spring.security.oauth2.client.registration.google.redirect-uri=${GOOGLE_REDIRECT_URI}
 spring.security.oauth2.client.registration.google.client-name=Google
+
+management.endpoints.web.exposure.include=health,info,prometheus,metrics
+management.endpoint.health.show-details=always
+management.metrics.enable.all=true
+management.metrics.distribution.percentiles-histogram.http.server.requests=true
