--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,4 +24,5 @@ services:
       - GOOGLE_CLIENT_ID=${{ shared.GOOGLE_CLIENT_ID }}
       - GOOGLE_CLIENT_SECRET=${{ shared.GOOGLE_CLIENT_SECRET }}
       - GOOGLE_REDIRECT_URI=${{ shared.GOOGLE_REDIRECT_URI }}
+      - FRONTEND_BASE_URL=${{ shared.FRONTEND_BASE_URL }}
     restart: always
