--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,3 +34,8 @@ management.endpoints.web.exposure.include=health,info,prometheus,metrics
 management.endpoint.health.show-details=always
 management.metrics.enable.all=true
 management.metrics.distribution.percentiles-histogram.http.server.requests=true
+
+spring.kafka.bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS:kafka.railway.internal:29092}
+spring.kafka.producer.properties.auto.create.topics.enable=true
+spring.kafka.producer.properties.request.timeout.ms=120000
+spring.kafka.producer.properties.max.block.ms=120000
