--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,7 +35,16 @@ management.endpoint.health.show-details=always
 management.metrics.enable.all=true
 management.metrics.distribution.percentiles-histogram.http.server.requests=true
 
-spring.kafka.bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS:kafka.railway.internal:29092}
+spring.kafka.consumer.group-id=myGroup
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS}
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+
+spring.kafka.producer.bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS}
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+
 spring.kafka.producer.properties.auto.create.topics.enable=true
 spring.kafka.producer.properties.request.timeout.ms=120000
 spring.kafka.producer.properties.max.block.ms=120000
