--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,6 +45,8 @@ spring.kafka.producer.bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS}
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 
+spring.kafka.bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS}
+
 spring.kafka.producer.properties.auto.create.topics.enable=true
 spring.kafka.producer.properties.request.timeout.ms=120000
 spring.kafka.producer.properties.max.block.ms=120000
