--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,18 +35,8 @@ management.endpoint.health.show-details=always
 management.metrics.enable.all=true
 management.metrics.distribution.percentiles-histogram.http.server.requests=true
 
-spring.kafka.consumer.group-id=myGroup
-spring.kafka.consumer.auto-offset-reset=earliest
-spring.kafka.consumer.bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS}
-spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-
-spring.kafka.producer.bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS}
-spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
-
-spring.kafka.bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS}
-
-spring.kafka.producer.properties.auto.create.topics.enable=true
-spring.kafka.producer.properties.request.timeout.ms=120000
-spring.kafka.producer.properties.max.block.ms=120000
+spring.kafka.bootstrap-servers=kafka.railway.internal:29092
+server.port=8080
+logging.level.root=INFO
+logging.level.com.novus=DEBUG
+logging.level.org.springframework.kafka=INFO
