--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,3 +34,5 @@ management.endpoints.web.exposure.include=health,info,prometheus,metrics
 management.endpoint.health.show-details=always
 management.metrics.enable.all=true
 management.metrics.distribution.percentiles-histogram.http.server.requests=true
+
+spring.kafka.bootstrap-servers=kafka.railway.internal:29092
