--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,4 +35,6 @@ management.endpoint.health.show-details=always
 management.metrics.enable.all=true
 management.metrics.distribution.percentiles-histogram.http.server.requests=true
 
-spring.kafka.bootstrap-servers=kafka.railway.internal:29092
+spring.kafka.bootstrap-servers=kafka-broker.railway.internal:9092
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
