[/] shared models version

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,5 +36,5 @@ management.metrics.enable.all=true
 management.metrics.distribution.percentiles-histogram.http.server.requests=true
 
 spring.kafka.bootstrap-servers=kafka-broker.railway.internal:9092
-spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
