--- a/pom.xml
+++ b/pom.xml
@@ -46,13 +46,13 @@
 		<dependency>
 			<groupId>com.novus</groupId>
 			<artifactId>shared-models</artifactId>
-			<version>1.1.5</version>
+			<version>1.1.7</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.novus</groupId>
 			<artifactId>database-utils</artifactId>
-			<version>1.0.9</version>
+			<version>1.1.2</version>
 		</dependency>
 
 		<dependency>
@@ -172,6 +172,12 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>com.cloudinary</groupId>
+			<artifactId>cloudinary-taglib</artifactId>
+			<version>2.0.0</version>
 		</dependency>
 	</dependencies>
 
