--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,10 @@ supmap.properties.jwt-secret=${JWT_SECRET}
 supmap.properties.kafka-bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS}
 supmap.properties.mongo-uri=${MONGO_URI}
 supmap.properties.frontend-base-url=${FRONTEND_BASE_URL}
+supmap.properties.cloudinary-api-key=${CLOUDINARY_API_KEY}
+supmap.properties.cloudinary-cloud-name=${CLOUDINARY_CLOUD_NAME}
+supmap.properties.cloudinary-api-secret=${CLOUDINARY_API_SECRET}
+supmap.properties.qr-code-api-url=${QR_CODE_API_URL}
 
 logging.level.org.elasticsearch=INFO
 logging.level.co.elastic.clients=INFO
