--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=api-gateway
 
+spring.main.banner-mode=off
+
 springdoc.swagger-ui.csrf.enabled=true
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
@@ -7,8 +9,6 @@ springdoc.swagger-ui.enabled=true
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
-
-spring.main.banner-mode=off
 
 supmap.properties.allowed-origins=${ALLOWED_ORIGINS}
 supmap.properties.database-name=${DATABASE_NAME}
@@ -39,6 +39,6 @@ management.endpoint.health.show-details=always
 management.metrics.enable.all=true
 management.metrics.distribution.percentiles-histogram.http.server.requests=true
 
-spring.kafka.bootstrap-servers=kafka-broker.railway.internal:9092
+spring.kafka.bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS}
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
